--- a/package.json
+++ b/package.json
@@ -2,27 +2,53 @@
   "name": "js_utils",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/cjs/index.cjs",
+  "module": "./dist/esm/index.mjs",
+  "types": "./dist/types/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/types/index.d.ts",
+      "import": "./dist/esm/index.mjs",
+      "require": "./dist/cjs/index.cjs",
+      "default": "./dist/cjs/index.cjs"
+    }
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "tsc",
+    "build": "bash generateIndex.sh && rollup -c",
     "lint:fix": "eslint --fix",
     "test": "jest",
     "preversion": "npm run lint:fix && npm run build && npm run test"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "javascript",
+    "utils"
+  ],
+  "author": "coderlzw",
+  "license": "MIT",
   "devDependencies": {
-    "@eslint/js": "^9.9.1",
+    "@eslint/js": "^9.12.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.5.0",
-    "eslint": "^9.9.1",
-    "globals": "^15.9.0",
+    "eslint": "^9.12.0",
+    "globals": "^15.10.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "rollup": "^4.24.0",
+    "rollup-plugin-delete": "^2.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.36.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
+    "tslib": "^2.7.0",
     "typescript": "^5.5.4",
-    "typescript-eslint": "^8.3.0"
+    "typescript-eslint": "^8.8.0",
+    "vite": "^5.4.8"
+  },
+  "packageManager": "pnpm@9.12.0+sha256.a61b67ff6cc97af864564f4442556c22a04f2e5a7714fbee76a1011361d9b726",
+  "engines": {
+    "node": ">=16.13.0"
   }
 }
