--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "js_utils",
+  "name": "@coderlzw/utils",
   "version": "1.0.0",
-  "description": "",
+  "description": "一个实用的 JavaScript 工具库，提供常用的函数和辅助方法",
   "main": "./dist/cjs/index.cjs",
   "module": "./dist/esm/index.mjs",
   "types": "./dist/types/index.d.ts",
@@ -13,9 +13,6 @@
       "default": "./dist/cjs/index.cjs"
     }
   },
-  "files": [
-    "dist"
-  ],
   "scripts": {
     "build": "bash generateIndex.sh && rollup -c",
     "lint:fix": "eslint --fix",
@@ -24,12 +21,28 @@
   },
   "keywords": [
     "javascript",
-    "utils"
+    "utils",
+    "helpers",
+    "utility",
+    "functions"
   ],
   "author": "coderlzw",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/coderlzw-cn/js-utils.git"
+  },
+  "bugs": {
+    "url": "https://github.com/coderlzw-cn/js-utils/issues"
+  },
+  "homepage": "https://github.com/coderlzw-cn/js-utils#readme",
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
     "@eslint/js": "^9.12.0",
+    "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-typescript": "^12.1.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.5.0",
     "eslint": "^9.12.0",
@@ -39,15 +52,14 @@
     "rollup": "^4.24.0",
     "rollup-plugin-delete": "^2.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.36.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "tslib": "^2.7.0",
-    "typescript": "^5.5.4",
-    "typescript-eslint": "^8.8.0",
-    "vite": "^5.4.8"
+    "typescript": "^5.6.0",
+    "typescript-eslint": "^8.8.0"
   },
-  "packageManager": "pnpm@9.12.0+sha256.a61b67ff6cc97af864564f4442556c22a04f2e5a7714fbee76a1011361d9b726",
+  "dependencies": {
+    "tslib": "^2.7.0"
+  },
   "engines": {
     "node": ">=16.13.0"
   }
