--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
   "files": [
     "dist"
   ],
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
